changes in html file in work experience section

--- a/index.html
+++ b/index.html
@@ -160,10 +160,11 @@
           <span> Work Experience </span>
         </h1>
         <div class="timeline">
-          <div class="timeline-box">hii i am dipankr</div>
-          <div class="timeline-box">hii i am dipankar</div>
-          <div class="timeline-box">hii i am dipu</div>
-          <div class="timeline-box">hii i am dipu</div>
+          <div class="timeline-box"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Est at officiis corrupti provident suscipit, ducimus dolorum animi delectus! Magni, enim?
+          </div>
+          <div class="timeline-box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat reiciendis dolores distinctio quis! Accusantium.</div>
+          <div class="timeline-box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dolore aut deleniti necessitatibus id odit ut. Laudantium deleniti veritatis velit.</div>
+          <div class="timeline-box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo consectetur sequi a alias eos officiis numquam, aut eligendi distinctio omnis!</div>
           <div class="timeline-border">
             <div class="timeline-traveller">
               <i class="fas fa-plane"></i>
